Update on Overleaf.

--- a/src/sections/appendix.tex
+++ b/src/sections/appendix.tex
@@ -3,7 +3,7 @@
 From a fresh install of Raspberry Pi OS, we need to install the necessary packages to run the readout system.
 The first step is to enable Secure Shell (SSH) so that we can remotely access the Raspberry Pi.
 This can be done in the Raspberry Pi Configuration tool by enabling SSH in the Interfaces tab.
-While we are in the interfaces tool, we mmust enable SPI and Remote GPIO. 
+While we are in the interfaces tool, we must enable SPI and Remote GPIO. 
 These are necessary to interface with the PMCC.
 
 Next, we need to configure the networking interfaces. 
